--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="PL-pl">
+<html lang="pl_PL">
 <head>
     <meta charset="UTF-8">
-    <title>Magic Dance</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Szkoła Tańca Magic-Dance Lublin</title>
+  <meta name="description" content="Szkoła Tańca Magic-Dance w Lublin.">
+  <meta name="keywords" content="szkoła tańca Lublin, kurs tańca Lublin, salsa Lublin, bachata Lublin, hip-hop Lublin, taniec towarzyski Lublin">
+  <meta name="author" content="Szkoła Tańca Magic-Dance Lublin">
+  <!-- <link rel="canonical" href="https://www.szkolarytmika.pl/"> -->
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <p>test123</p>
+    <div id="baner">
+        <a href="index.html"><img src="logo1.png" alt="logo magic-dance" id="logo"></a>
+    </div>
+
+    <div id="main">
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1><h1>Jakieś informacje</h1>
+        <h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1>
+    </div>
+    
+    <footer>
+        <h2>Kontakt:</h2>
+        <p>Adres: ul.Herberta 14 (pierwsze piętro)</p>
+        <p>Tel: 000000000</p>
+        <p>E-mail: XXX</p>
+        <center><p id="prawa">© 2025 Szkoła Tańca "Magic-Dance" – Lublin | Wszelkie prawa zastrzeżone</p></center>
+
+    </footer>
 </body>
 </html>
