upload new files

--- a/index.html
+++ b/index.html
@@ -16,15 +16,26 @@
     </div>
 
     <div id="main">
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1><h1>Jakieś informacje</h1>
-        <h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1><h1>Jakieś informacje</h1>
+        <!--TABELA DO DODAWANIA ZDJĘĆ I INNYCH INFORMACJI-->
+        <table>
+            <tr>
+                <td>
+                    <div class="image-container">
+                        <img src="ulotka_nowa2.png" alt="Przykład 1" id="zdj">
+                        <div class="caption">To jest opis zdjęcia 1</div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="image-container">
+                        <img src="ulotka_dorośli.png" alt="Przykład 1" id="zdj">
+                        <div class="caption">To jest opis zdjęcia 1</div>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
     
     <footer>
