Działanie dla telefonów
Dodano działanie dla telefonów

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="main">
         <!--TABELA DO DODAWANIA ZDJĘĆ I INNYCH INFORMACJI-->
-        <table>
+        <!-- <table>
             <tr>
                 <td>
                     <div class="image-container">
@@ -35,7 +35,19 @@
                     </div>
                 </td>
             </tr>
-        </table>
+        </table>-->
+
+
+        <div class="image-container">
+    <img src="ulotka_nowa2.png" alt="Przykład 1">
+    <div class="caption">To jest opis zdjęcia 1</div>
+  </div>
+
+  <div class="image-container">
+    <img src="ulotka_dorośli.png" alt="Przykład 2">
+    <div class="caption">To jest opis zdjęcia 2</div>
+  </div>
+
     </div>
     
     <footer>
